force-app/main/default/objects/Developer1__c/Developer1__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the Developers that are working in an organization.</description>
    <label>Developer1</label>
    <nameField>
        <label>Developer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Developers1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>