force-app/main/default/objects/Developer1__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>YEAR(TODAY())-YEAR( BirthDate__c ) +
IF( MONTH(TODAY()) &lt; MONTH( BirthDate__c ) , -1,
IF(DAY(TODAY())&lt;DAY( BirthDate__c ), -1, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>