force-app/main/default/objects/Developer1__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Stores the birthdate</description>
    <inlineHelpText>Stores the birthdate</inlineHelpText>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>