force-app/main/default/objects/Developer1__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of the Manager</description>
    <inlineHelpText>Stores the Location of the Manager</inlineHelpText>
    <label>Location</label>
    <referenceTo>Work_Location__c</referenceTo>
    <relationshipLabel>Developers1</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <type>Lookup</type>
</CustomField>