force-app/main/default/objects/Developer1__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Stores the Name of developer</description>
    <inlineHelpText>Stores the Name of developer</inlineHelpText>
    <label>Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>