force-app/main/default/objects/Developer1__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Developer should have the same project as the Reporting Manager</description>
    <inlineHelpText>The Developer should have the same project as the Reporting Manager</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project1__c</referenceTo>
    <relationshipLabel>Developers1</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <type>Lookup</type>
</CustomField>