force-app/main/default/objects/Developer1__c/fields/Reporting_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Manager__c</fullName>
    <description>This field stores the Name of the manager to which the Developer Reports to</description>
    <inlineHelpText>This field stores the Name of the manager to which the Developer Reports to</inlineHelpText>
    <label>Reporting Manager</label>
    <referenceTo>Manager1__c</referenceTo>
    <relationshipLabel>Developers1</relationshipLabel>
    <relationshipName>Developers1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>